--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -63,7 +63,7 @@
   align-items: center;
 }
 
-.formField, .loginBtn, .bikeConnectBtn {
+.formField, .loginBtn, .button {
   max-width: 100%;
   width: 260px;
   margin-top: 15px;
@@ -80,11 +80,20 @@
   width: 100%;
 }
 
-.loginBtn, .bikeConnectBtn, .formField input {
+.loginBtn, .button, .formField input {
   padding: 10px;
   font-size: 0.9rem;
   border: 2px solid black;
   background-color: rgba(0,0,0,0);
+}
+
+.button.positive {
+  background-color: #c8e6c9;
+}
+
+.button.secondary {
+  border-color: rgba(0,0,0,0.6);
+  color: rgba(0,0,0,0.7);
 }
 
 .formField input[disabled], .loginBtn[disabled] {
@@ -94,7 +103,7 @@
 
 .errorBox {
   max-width: 260px;
-  padding-top: 10px;
+  padding: 10px 0;
   color: darkred;
   display: inline-block;
 }
@@ -119,6 +128,6 @@
   color: rgba(0,0,0,0.6)
 }
 
-.setSpeedLimit button:focus, .loginBtn:focus, .bikeConnectBtn:focus {
+.setSpeedLimit button:focus, .loginBtn:focus, .button:focus {
   border-color: #1976d2;
 }
