--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,49 @@
+/* Light theme */
+:root {
+  --main-bg-color: white;
+  --text-color: black;
+  --label-color: rgba(0, 0, 0, 0.7);
+  --disabled-text-color: rgba(0, 0, 0, 0.5);
+  --border-color: black;
+  --secondary-border-color: rgba(0, 0, 0, 0.6);
+  --divider-color: #eaeaea;
+  --error-box-bg-color: #ffccbc;
+  --warning-box-bg-color: #ffecb3;
+  --positive-box-bg-color: #c8e6c9;
+  --active-color: #1976d2;
+}
+
+@media (prefers-color-scheme: dark) {
+
+  /* Dark theme */
+  :root {
+    --main-bg-color: #121212;
+    --text-color: white;
+    --label-color: rgba(255, 255, 255, 0.75);
+    --disabled-text-color: rgba(255, 255, 255, 0.55);
+    --border-color: white;
+    --secondary-border-color: rgba(255, 255, 255, 0.75);
+    --divider-color: #404040;
+    --error-box-bg-color: #b71c1c;
+    --warning-box-bg-color: #5d4037;
+    --positive-box-bg-color: #004d40;
+    --active-color: #42a5f5;
+  }
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
+}
+
+body {
   font-size: 18px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  }
+  background-color: var(--main-bg-color);
+  color: var(--text-color);
+}
 
 a {
   color: #1976d2;
@@ -18,8 +56,11 @@ a {
 
 button {
   cursor: pointer;
+  color: var(--text-color);
 }
 
 button[disabled] {
-  cursor: default
+  cursor: default;
+  color: var(--disabled-text-color);
+  border-color: var(--disabled-text-color);
 }
