make links in error blocks better readable

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -43,6 +43,10 @@
   background-color: var(--error-box-bg-color);
 }
 
+.errorBlock a {
+  font-weight: bold;
+}
+
 .errorBlock::before {
   content: '🧨';
   padding-right: 10px;
